*SVN*

* Allow JSON-style values for the :with option of observe_field.  Closes #8557 [kommen]

* Remove RAILS_ROOT from backtrace paths.  #8540 [Tim Pope]

* Routing: map.resource :logo routes to LogosController so the controller may be reused for multiple nestings or namespaces.  [Jeremy Kemper]

* render :partial recognizes Active Record associations as Arrays.  #8538 [kamal]

* Routing: drop semicolon and comma as route separators.  [Jeremy Kemper]

* request.remote_ip understands X-Forwarded-For addresses with nonstandard whitespace.  #7386 [moses]

* Don't prepare response when rendering a component.  #8493 [jsierles]

* Reduce file stat calls when checking for template changes.  #7736 [alex]

* Added custom path cache_page/expire_page parameters in addition to the options hashes [DHH]. Example:

    def index
      caches_page(response.body, "/index.html")
    end

* Action Caching speedup.  #8231 [skaes]

* Wordsmith resources documentation.  #8484 [marclove]

* Fix syntax error in code example for routing documentation. #8377. [norbert]

* Routing: respond with 405 Method Not Allowed status when the route path matches but the HTTP method does not.  #6953 [Josh Peek, defeated, Dan Kubb, Coda Hale]

* Add support for assert_select_rjs with :show and :hide. #7780 [dchelimsky]

* Make assert_select's failure messages clearer about what failed. #7779 [dchelimsky]

* Introduce a default respond_to block for custom types.  #8174 [Josh Peek]

* auto_complete_field takes a :method option so you can GET or POST.  #8120 [zapnap]

* Added option to suppress :size when using :maxlength for FormTagHelper#text_field #3112 [rails@tpope.info]

* catch possible WSOD when trying to render a missing partial. Closes #8454 [Catfish]

* Rewind request body after reading it, if possible.  #8438 [s450r1]

* Resource namespaces are inherited by their has_many subresources.  #8280 [marclove, ggarside]

* Fix filtered parameter logging with nil parameter values.  #8422 [choonkeat]
